Alignment fix.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -3542,6 +3542,7 @@ $saved-search-control-height: 48px;
         }
         .profile-image {
             margin-right: 10px;
+            line-height: 1;
         }
         h1 {
             font-size: 18px;
